--- a/Moduo2/Client/Views/LeaderWork.xaml
+++ b/Moduo2/Client/Views/LeaderWork.xaml
@@ -8,9 +8,13 @@
              d:DesignHeight="370" d:DesignWidth="750">
     <Grid Background="White">
         <TabControl >
-            <TabItem Header="Tasks" Margin="0,1,-4,-1" Height="39">
+            <TabItem Header="All Tasks" Margin="446,1,-450,-1" Height="39">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dataGridTasks" ItemsSource="{Binding AllTasks, Mode=TwoWay}" SelectionMode="Single"  AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True" CanUserAddRows="False" CanUserResizeColumns="False" CanUserReorderColumns="False" HorizontalAlignment="Left" Height="299" Margin="10,10,0,0" VerticalAlignment="Top" Width="433">
+                    <Grid  Background="White" Margin="10,191,297,10">
+                        <Button x:Name="buttonTaskDescription" Content="Task Description" IsEnabled="True" HorizontalAlignment="Left" Height="21" Margin="10,10,0,0" VerticalAlignment="Top"  Width="130" Click="buttonTaskDescription_Click"  />
+                        <TextBox x:Name="textTaskDescription" Background="AntiqueWhite" HorizontalAlignment="Left" Height="72" Margin="10,36,0,0" IsHitTestVisible="False" Focusable="False" BorderBrush="Transparent" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="413" />
+                    </Grid>
+                    <DataGrid x:Name="dataGridTasks" ItemsSource="{Binding AllTasks, Mode=TwoWay}" SelectionMode="Single"  AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True" CanUserAddRows="False" CanUserResizeColumns="False" CanUserReorderColumns="False" HorizontalAlignment="Left" Height="176" Margin="10,10,0,0" VerticalAlignment="Top" Width="433">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="Project" Binding="{Binding ProjectName}"/>
                             <DataGridTextColumn Header="User Story" Binding="{Binding UserStory.Description}"/>
@@ -27,9 +31,9 @@
                     </Grid>
                 </Grid>
             </TabItem>
-            <TabItem Header="My Tasks" Margin="8,0,-12,0" Height="39">
+            <TabItem Header="My Tasks" Margin="452,1,-456,-1" Height="39">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dataGridMyTasks" ItemsSource="{Binding MyTasks, Mode=TwoWay}" SelectionMode="Single"  AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True" CanUserAddRows="False" CanUserResizeColumns="False" CanUserReorderColumns="False" HorizontalAlignment="Left" Height="299" Margin="10,10,0,0" VerticalAlignment="Top" Width="433">
+                    <DataGrid x:Name="dataGridMyTasks" ItemsSource="{Binding MyTasks, Mode=TwoWay}" SelectionMode="Single"  AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True" CanUserAddRows="False" CanUserResizeColumns="False" CanUserReorderColumns="False" HorizontalAlignment="Left" Height="176" Margin="10,10,0,0" VerticalAlignment="Top" Width="437">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="Project" Binding="{Binding ProjectName}"/>
                             <DataGridTextColumn Header="User Story" Binding="{Binding UserStory.Description}"/>
@@ -44,11 +48,43 @@
                         <ComboBox x:Name="comboBoxMyTasks" ItemsSource="{Binding MyTasks, Mode=TwoWay}" HorizontalAlignment="Left" Height="24" Margin="10,73,0,0" VerticalAlignment="Top" Width="238"/>
                         <Button x:Name="buttonTaskComplete" Content="Complete" IsEnabled="True" HorizontalAlignment="Left" Height="31" Margin="194,258,0,0" VerticalAlignment="Top" Width="65" Click="buttonTaskComplete_Click"/>
                     </Grid>
+                    <Grid  Background="White" Margin="10,191,293,10">
+                        <Button x:Name="buttonMyTaskDescription" Content="Task Description" IsEnabled="True" HorizontalAlignment="Left" Height="21" Margin="10,10,0,0" VerticalAlignment="Top"  Width="130" Click="buttonMyTaskDescription_Click" />
+                        <TextBox x:Name="textMyTaskDescription" Background="AntiqueWhite" HorizontalAlignment="Left" Height="72" Margin="10,36,0,0" IsHitTestVisible="False" Focusable="False" BorderBrush="Transparent" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="417" />
+                    </Grid>
                 </Grid>
             </TabItem>
-            <TabItem Header="User Stories" Height="39" Margin="28,0,-44,0">
+            <TabItem Header="Prepare User Stories" Height="39" Margin="48,1,-64,-1">
                 <Grid Background="#FFE5E5E5">
-                    <DataGrid x:Name="dataGridUserStories" ItemsSource="{Binding UserStories, Mode=TwoWay}" SelectionMode="Single"  AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True" CanUserAddRows="False" CanUserResizeColumns="False" CanUserReorderColumns="False" HorizontalAlignment="Left" Height="176" Margin="10,10,0,0" VerticalAlignment="Top" Width="345">
+                    <DataGrid x:Name="dataGridUserStories" ItemsSource="{Binding UserStories, Mode=TwoWay}" SelectionMode="Single"  AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True" CanUserAddRows="False" CanUserResizeColumns="False" CanUserReorderColumns="False" HorizontalAlignment="Left" Height="176" Margin="10,10,0,0" VerticalAlignment="Top" Width="438">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header=" Name" Binding="{Binding Title}"/>
+                            <DataGridTextColumn Header=" Project" Binding="{Binding Project.Name}"/>
+                            <DataGridTextColumn Header=" Difficulty" Binding="{Binding Difficulty}"/>
+                            <DataGridTextColumn Header=" Deadline" Binding="{Binding Deadline}"/>
+                            <DataGridTextColumn Header=" Accept Status" Binding="{Binding AcceptSatus}"/>
+                            <DataGridTextColumn Header=" Progress Status" Binding="{Binding ProgressSatus}"/>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                    <Grid x:Name="gridAddTask" Background="White" Margin="463,10,10,10">
+                        <Label x:Name="labelTitle2" Content="Make task" FontSize="16" HorizontalAlignment="Left" Height="37" Margin="93,10,-25,0" VerticalAlignment="Top" Width="199"/>
+                        <ComboBox x:Name="comboBoxStories" ItemsSource="{Binding UserStories, Mode=TwoWay}" HorizontalAlignment="Left" Height="24" Margin="21,73,0,0" VerticalAlignment="Top" Width="229"/>
+                        <Label x:Name="labelTask1" Content="User story: (must be accepted and in prep)" HorizontalAlignment="Left" Height="26" Margin="17,47,-7,0" VerticalAlignment="Top" Width="257" RenderTransformOrigin="0.372,0.731"/>
+                        <Label x:Name="labelTaskContent" Content="Content: " HorizontalAlignment="Left" Height="26" Margin="21,137,0,0" VerticalAlignment="Top" Width="199" RenderTransformOrigin="0.372,0.731"/>
+                        <TextBox x:Name="textBoxTaskContent" HorizontalAlignment="Left" Height="81" Margin="21,163,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="229" TextChanged="textBoxTaskContent_TextChanged" />
+                        <Label x:Name="labelTaskTitle" Content="Title: " HorizontalAlignment="Left" Height="26" Margin="21,111,0,0" VerticalAlignment="Top" Width="199" RenderTransformOrigin="0.372,0.731"/>
+                        <TextBox x:Name="textBoxTaskTitle" HorizontalAlignment="Left" Height="21" Margin="67,111,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="183" TextChanged="textBoxTaskTitle_TextChanged" />
+                        <Button x:Name="buttonTaskAdd" Content="Create" IsEnabled="False" HorizontalAlignment="Left" Height="31" Margin="185,258,0,0" VerticalAlignment="Top" Width="65" Click="buttonTaskAdd_Click"/>
+                    </Grid>
+                    <Grid x:Name="gridStartStory" Background="White" Margin="10,191,292,10">
+                        <Button x:Name="buttonUserStoryDescription" Content="Userstory Description" IsEnabled="True" HorizontalAlignment="Left" Height="21" Margin="10,10,0,0" VerticalAlignment="Top"  Width="130" Click="buttonUserStoryDescription_Click" />
+                        <TextBox x:Name="textUserStoryDescription" Background="AntiqueWhite" HorizontalAlignment="Left" Height="72" Margin="10,36,0,0" IsHitTestVisible="False" Focusable="False" BorderBrush="Transparent" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="418" />
+                    </Grid>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Release User Stories" Height="39" Margin="0,1,-66,-1" HorizontalAlignment="Right" Width="136">
+                <Grid Background="#FFE5E5E5">
+                    <DataGrid x:Name="dataGridUserStories1" ItemsSource="{Binding UserStories, Mode=TwoWay}" SelectionMode="Single"  AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True" CanUserAddRows="False" CanUserResizeColumns="False" CanUserReorderColumns="False" HorizontalAlignment="Left" Height="299" Margin="10,10,0,0" VerticalAlignment="Top" Width="345">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header=" Name" Binding="{Binding Name}"/>
                             <DataGridTextColumn Header=" Project" Binding="{Binding Project.Name}"/>
@@ -57,25 +93,15 @@
                             <DataGridTextColumn Header=" Accept Status" Binding="{Binding AcceptSatus}"/>
                         </DataGrid.Columns>
                     </DataGrid>
-                    <Grid x:Name="gridAddTask" Background="White" Margin="376,10,10,10">
-                        <Label x:Name="labelTitle2" Content="Make task" FontSize="16" HorizontalAlignment="Left" Height="37" Margin="122,10,0,0" VerticalAlignment="Top" Width="199"/>
-                        <ComboBox x:Name="comboBoxStories" ItemsSource="{Binding UserStories, Mode=TwoWay}" HorizontalAlignment="Left" Height="24" Margin="21,73,0,0" VerticalAlignment="Top" Width="280"/>
-                        <Label x:Name="labelTask1" Content="User story: (must be in accepted and in prep)" HorizontalAlignment="Left" Height="26" Margin="21,47,0,0" VerticalAlignment="Top" Width="257" RenderTransformOrigin="0.372,0.731"/>
-                        <Label x:Name="labelTaskContent" Content="Content: " HorizontalAlignment="Left" Height="26" Margin="21,137,0,0" VerticalAlignment="Top" Width="199" RenderTransformOrigin="0.372,0.731"/>
-                        <TextBox x:Name="textBoxTaskContent" HorizontalAlignment="Left" Height="81" Margin="21,163,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="323" TextChanged="textBoxTaskContent_TextChanged" />
-                        <Label x:Name="labelTaskTitle" Content="Title: " HorizontalAlignment="Left" Height="26" Margin="21,111,0,0" VerticalAlignment="Top" Width="199" RenderTransformOrigin="0.372,0.731"/>
-                        <TextBox x:Name="textBoxTaskTitle" HorizontalAlignment="Left" Height="21" Margin="67,111,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="234" TextChanged="textBoxTaskTitle_TextChanged" />
-                        <Button x:Name="buttonTaskAdd" Content="Create" IsEnabled="False" HorizontalAlignment="Left" Height="31" Margin="279,258,0,0" VerticalAlignment="Top" Width="65" Click="buttonTaskAdd_Click"/>
-                    </Grid>
-                    <Grid x:Name="gridStartStory" Background="White" Margin="10,191,385,10">
-                        <Label x:Name="labelTitle33" Content="Finish user story" FontSize="16" HorizontalAlignment="Left" Height="37" Margin="102,0,0,0" VerticalAlignment="Top" Width="199"/>
-                        <Label x:Name="labelTask" Content="User story: (must be in accepted and in prep)" HorizontalAlignment="Left" Height="26" Margin="10,24,0,0" VerticalAlignment="Top" Width="279" RenderTransformOrigin="0.372,0.731"/>
-                        <ComboBox x:Name="comboBoxStories1" ItemsSource="{Binding UserStories, Mode=TwoWay}" HorizontalAlignment="Left" Height="24" Margin="10,55,0,0" VerticalAlignment="Top" Width="280"/>
-                        <Button x:Name="buttonFinishStory" Content="Finish Story" IsEnabled="True" HorizontalAlignment="Left" Height="31" Margin="247,84,0,0" VerticalAlignment="Top" Width="88" Click="buttonFinishStory_Click"/>
+                    <Grid  Background="White" Margin="385,10,10,10">
+                        <Label x:Name="labelTitle33" Content="Finish user story" FontSize="16" HorizontalAlignment="Left" Height="37" Margin="102,10,0,0" VerticalAlignment="Top" Width="199"/>
+                        <Label x:Name="labelTask" Content="User story: (must be in accepted and in prep)" HorizontalAlignment="Left" Height="26" Margin="22,94,0,0" VerticalAlignment="Top" Width="279" RenderTransformOrigin="0.372,0.731"/>
+                        <ComboBox x:Name="comboBoxStories1" ItemsSource="{Binding UserStories, Mode=TwoWay}" HorizontalAlignment="Left" Height="24" Margin="22,125,0,0" VerticalAlignment="Top" Width="280"/>
+                        <Button x:Name="buttonFinishStory" Content="Finish Story" IsEnabled="True" HorizontalAlignment="Left" Height="31" Margin="247,258,0,0" VerticalAlignment="Top" Width="88" Click="buttonFinishStory_Click"/>
                     </Grid>
                 </Grid>
             </TabItem>
-            <TabItem Header="Projects" Height="39" Margin="49,0,-49,0">
+            <TabItem Header="Projects" Height="39" Margin="-380,1,380,-1">
                 <Grid Background="#FFE5E5E5">
                     <DataGrid x:Name="dataGridProjects" ItemsSource="{Binding MyTeamProjects, Mode=TwoWay}" SelectionMode="Single"  AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True" CanUserAddRows="False" CanUserResizeColumns="False" CanUserReorderColumns="False" HorizontalAlignment="Left" Height="155" Margin="10,10,0,0" VerticalAlignment="Top" Width="345">
                         <DataGrid.Columns>
@@ -94,14 +120,22 @@
                         <Label x:Name="labelUserStoryDifficulty" Content="Difficulty: " HorizontalAlignment="Left" Height="26" Margin="21,263,0,0" VerticalAlignment="Top" Width="199" RenderTransformOrigin="0.372,0.731"/>
                         <TextBox x:Name="textBoxUserStoryDifficulty" HorizontalAlignment="Left" Height="24" Margin="90,265,0,0" TextWrapping="Wrap" Text="2" VerticalAlignment="Top" Width="40" TextChanged="textBoxUserStoryDifficulty_TextChanged"/>
                         <Button x:Name="buttonUserStoryAdd" Content="Create" IsEnabled="False" HorizontalAlignment="Left" Height="31" Margin="279,258,0,0" VerticalAlignment="Top" Width="65" Click="buttonUserStoryAdd_Click"/>
-
                     </Grid>
-
+                    <Grid  Background="White" Margin="10,170,385,10">
+                        <Button x:Name="buttonProjectDescription" Content="Project Description" IsEnabled="True" HorizontalAlignment="Left" Height="21" Margin="10,10,0,0" VerticalAlignment="Top"  Width="130" Click="buttonProjectDescription_Click"/>
+                        <TextBox x:Name="textProjectDescription" Background="AntiqueWhite" HorizontalAlignment="Left" Height="93" Margin="10,36,0,0" IsHitTestVisible="False" Focusable="False" BorderBrush="Transparent" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="325" />
+                    </Grid>
                 </Grid>
             </TabItem>
-            <TabItem Header="Send User Messages" Margin="54,0,-58,0" Height="39">
+            <TabItem Header="Send User Stories" Margin="-378,1,374,-1" Height="39">
                 <Grid Background="#FFE5E5E5">
-                    <Grid Background="White" Margin="194,10,198,10">
+                    <DataGrid x:Name="dataGridProjects1" ItemsSource="{Binding MyTeamProjects, Mode=TwoWay}" SelectionMode="Single"  AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True" CanUserAddRows="False" CanUserResizeColumns="False" CanUserReorderColumns="False" HorizontalAlignment="Left" Height="299" Margin="10,10,0,0" VerticalAlignment="Top" Width="345">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header=" Project Name" Binding="{Binding Name}"/>
+                            <DataGridTextColumn Header=" Status" Binding="{Binding ProgressStatus}"/>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                    <Grid Background="White" Margin="382,10,10,10">
                         <Label x:Name="labelTitle44" Content="Send userstories" FontSize="16" HorizontalAlignment="Left" Height="37" Margin="103,10,0,0" VerticalAlignment="Top" Width="158"/>
                         <ComboBox x:Name="comboBoxProjectsSend" ItemsSource="{Binding MyProjects, Mode=TwoWay}" HorizontalAlignment="Left" Height="24" Margin="21,96,0,0" VerticalAlignment="Top" Width="280"/>
                         <Label x:Name="labelProjectSend" Content="Project: (must be in prep)" HorizontalAlignment="Left" Height="26" Margin="21,63,0,0" VerticalAlignment="Top" Width="199" RenderTransformOrigin="0.372,0.731"/>
